# agent-wireguard-rust

./: .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: lint.yml  release.yml
scripts/: download_binary.sh  server_setup.sh  setup_wireguard.sh
src/: config.rs  main.rs
src/dto/: mod.rs
src/dto/configs/: mod.rs
src/dto/configs/response/: config.rs
src/dto/response/: error.rs  mod.rs  success.rs
src/enums/errors/internal/: io_error.rs  mod.rs
src/handlers/: add_config.rs  mod.rs
src/scripts/: add_config.rs  get_used_ips.rs  mod.rs
src/services/: config_service.rs  mod.rs
